# DENSE

./: .gitignore  .gitmodules  CMakeLists.txt  DOC.md  DOCS.md  DOXYGEN  Doxyfile  Organization.md  README.md  simulation_set.hpp
infection-build/: CMakeLists.txt  analyses.xml  model_impl.hpp  param_grad_template.csv  param_pert_template.csv  param_sets.csv  param_sets_template.csv  reaction_deltas.hpp  reactions_list.hpp  specie_list.hpp
source/: Anderson_Next_Reaction_Main.cpp  Anderson_main.cpp  Average_main.cpp  CMakeLists.txt  CMakeLists.txt.orig  Callback.hpp  Cell_Grow_Main.cpp  Fast_Gillespie_Main.cpp  Gillespie_Direct_main.cpp  Makefile  Next_Reaction_Main.cpp  ODEpk_main.cpp  Sim_Builder.hpp  Sim_Initializer.cpp  Sim_Initializer.hpp  Simpson_main.cpp  Sorting_Direct_Main.cpp  Trapezoidal_main.cpp  analysis.cpp  analysis.cpp~  analysis.hpp  analysis.hpp~  arg_parse.cpp  arg_parse.hpp  baby_cl.cpp  baby_cl.hpp  baby_cl_cuda.cpp  baby_cl_cuda.cu  baby_cl_cuda.hpp  cell_param.cpp  cell_param.hpp  color.cpp  color.hpp  common_utils.hpp  concentration_level.hpp  context.cpp  context.hpp  context_determ.hpp  context_impl.hpp  context_stoch.hpp  (+86 more)
source/analysis/: base.cpp  base.hpp  basic.cpp  basic.hpp  conccheck.hpp  oscillation.cpp
source/anlys/: base.cpp  base.hpp  basic.cpp  basic.hpp  conccheck.hpp  oscillation.cpp  oscillation.hpp
source/core/: build_once.cpp  build_once.cu  context.hpp  model.cpp  model.hpp  observable.cpp  observable.hpp  param_set.hpp  parameter_set.hpp  queue.hpp  reaction.hpp  reaction_inits.hpp  specie.hpp
source/io/: arg_parse.cpp  arg_parse.hpp  csvr.cpp  csvr.hpp  csvr_param.cpp  csvr_param.hpp  csvr_sim.cpp  csvr_sim.hpp  csvw.cpp  csvw.hpp  csvw_param.cpp  csvw_param.hpp  csvw_sim.cpp  csvw_sim.hpp  csvw_sim.ipp
source/io/ezxml/: ezxml.c  ezxml.h
source/measurement/: bad_simulation_error.hpp  base.cpp  base.hpp  base.ipp  basic.cpp  basic.hpp  basic.ipp  basic_oscillation.hpp  conccheck.hpp  convergence.hpp  details.hpp  in_memory_log.hpp  oscillation.cpp  oscillation.hpp  oscillation.ipp  perf.hpp  perf.ipp
source/ngraph/: Makefile  adj2g.cc  adjm2g.cc  annotate_groups.cc  brian_to_edgelist.cc  cg2savg.cc  community_fast.csh  create_contiguous.cc  create_imap0.cc  create_imap1.cc  equivalence.hpp  equivalence_tree.hpp  freq.cc  freqline.cc  g0_2mi.csh  g2Pmatrix.cc  g2Pmetric.cc  g2Pmetric_level.cc  g2Ptree.cc  g2adj.cc  g2alignment.cc  g2cng.csh  g2cug.cc  g2cug_old.cc  g2dccf.cc  g2degfreq.cc  g2degree.cc  g2dot.c  g2dot.cc  g2g0.cc  g2g0gm.cc  g2giant_v.cc  g2lrand.cc  g2madj.cc  g2mi.csh  g2mtx.cc  g2prand.cc  g2rand.cc  g2scc.cc  g2tgf.cc  (+78 more)
source/search/: sres.cpp  sres.hpp
source/search/libsres/: ESES.cpp  ESES.hpp  ESSRSort.cpp  sharefunc.cpp  sharefunc.hpp
source/search/libsres-mpi/: ESES.cpp  ESES.hpp  ESSRSort.cpp  ESSRSort.hpp  sharefunc.cpp
source/sim/: base.cpp  base.hpp  base_BACKUP_13239.hpp  base_LOCAL_13239.hpp  cell_param.cpp  cell_param.hpp  cell_param.ipp  set.hpp  set_cuda.cu  set_cuda.hpp  simulation_methods.h
source/sim/4th_Runge_Kutta/: rk4.cpp
source/sim/determ/: avg.cpp  avg.hpp  baby_cl.cpp  baby_cl.hpp  baby_cl_cuda.cu  baby_cl_cuda.hpp  dense_cl.cpp  dense_cl.hpp  determ.cpp  determ.hpp  determ_context.hpp  determ_cuda.cu  determ_cuda.hpp  determ_cuda_context.hpp  num_sim.cpp  num_sim.hpp  odepk.cpp  odepk.hpp  simpson.cpp  simpson.hpp  trap.cpp  trap.hpp
source/sim/stoch/: Gillespie_Direct_Simulation.cpp  Gillespie_Direct_Simulation.hpp  a.out  anderson_next_reaction.cpp  anderson_next_reaction.hpp  anderson_next_reaction_simulation.cpp  anderson_next_reaction_simulation.hpp  heap.hpp  (+25 more)
source/util/: Real.hpp  color.cpp  color.hpp  common_utils.cpp  common_utils.hpp  style.hpp
source/utility/: Range.hpp  color.cpp  common_utils.cpp  common_utils.hpp  configurable.hpp  cuda.hpp  numerics.cpp  numerics.hpp  preprocessor.cpp  preprocessor.hpp  style.hpp
test/Belousov-Zhabotinksy/: CMakeLists.txt  analesys.xml  anlys_basic_a.csv  anlys_basic_b.csv  anlys_basic_c.csv  anlys_basic_d.csv  anlys_basic_e.csv  anlys_oscil.csv  average_simulation  gillespie  nextreaction  paramsearch  reaction_deltas.hpp  run_test.cmake  simpson_simulation  simulation  trapezoid_simulation
test/Nan_Test/: CMakeLists.txt  analyses.xml  anlys_basic_a.csv  model_impl.hpp  param_sets.csv  reactions_list.hpp  specie_list.hpp
test/briggs-rauscher/: CMakeLists.txt
test/her_model_2014/: CMakeCache.txt  CMakeLists.txt  Makefile  analyses.xml  anlys_basic_a.csv  anlys_basic_b.csv  anlys_basic_osci.csv  anlys_converge_0_threshold.csv  anlys_oscil.csv  cell_width_test_anlys.csv  gillespie  init_conc.csv  model_impl.hpp  nextreaction  output.csv  param_grad_template.csv  param_list.csv  param_list_template.csv  param_pert_template.csv  param_sets.csv  param_sets_template.csv  paramsearch  reaction.cpp  reaction.cu  reaction_deltas.hpp  run_test.cmake  run_test.cmake~  search_main.cpp  specie_list.hpp  test_convergence.csv  total_time_test_01_anlys.csv  total_time_test_anlys.csv
test/numdiff-5.9.0/: AUTHORS  BUGS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.in  NEWS  README  analyze.c  arith.c  bitvector.c  bitvector.h  cmpbuf.c  cmpfns.c  config.h  config.h.in  config.status  configure.ac  error.c  errors.c  flags.c  inout.c  io.c  linesplit.c  linesplit.h  main.c  ndselect.c  ndselect.h  new.c  numdiff  numdiff.h  numutil.c  options.c  read_line.c  system.h  thrlist.c  util.c
test/simple_convergence_test/: CMakeLists.txt  analyses.xml  anlys_converge.csv  reaction_deltas.hpp  run_test.cmake  specie_list.hpp
test/simple_model/: CMakeLists.txt  analesys.xml  analesysb.xml  init_conc.csv  model_impl.hpp  param_sets.csv  reaction_deltas.hpp  reactions_list.hpp  run_test.cmake  specie_list.hpp  test.cfg  test.ref
test/stochastic_convergence_test/: CMakeLists.txt  RSSA__convergence_simulation  analyses.xml  anlys_converge.csv  dir_convergence_simulation  log_dir__convergence_simulation  model_impl.hpp  param_sets.csv  reactions_list.hpp  run_test.cmake
test/time_test/: CMakeLists.txt  param_sets.csv  run_test.cmake
(+296 files in other folders)
